--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <title>My Favorite Letterform</title>
+  </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<!-- Very nicely structured! Keep up the great work! -->
+  <h1>Q</h1>
+  <button>Click Me</button>
+
+  <section>ABCDEFGHIJKLMNOPabcdefghijklmnop1234567890?!%@</section>
+
+  <h2>ITC AVANT GARDE GOTHIC / BOOK</h2>
+  <p>The first use of the Avant Garde typeface was in the logo created by graphic designer, Herb Lubalin for the Avant Garde Magazine. The arts and politics magazine was especially popular with New York’s editorial art directors and advertisers. The type for the Avant Garde logo was originally all caps with uniquely fitted character placements (ligatures). Designers say that the first time the ligatures were used was the only time they were used correctly. The letters in the logo were later made into a full commercial font with upper and lower case by Lubalin and his assistant Tom Carnase(<a href="">Lubalin</a>).</p>
+
+  <p>Avant Garde is a geometrically shaped typeface with large circular counters, straight lines, and a t ll X-height. The typeface was created as a display face meant to be tightly kerned and closely leaded. Lubalin was inspired by the sans serif typeface Futura as well as the 1920s Bauhaus movement when he designed the original Avant Garde logo.</p>
+
+  <img src="assets/yerim-lee-profile.jpg">
+
+  <h3>Yerim Lee</h3>
+  <h4>Designer and Multimedia Artist</h4>
+
+  <h5>Sources</h5>
+
+
 </body>
-</html>
