Link mistake fixed

--- a/assets/index.html
+++ b/assets/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>My Favorite Letterform</title>
-  <link rel="stylesheet" href="assets/styles.css"
+  <link rel="stylesheet" href="assets/styles.css"></link>
 </head>
 
 <body>
