--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>My Favorite Letterform</title>
+  <title>Avant Garde Letterform</title>
   <link rel="stylesheet" href="assets/styles.css"></link>
 </head>
 
@@ -13,7 +13,7 @@
 <!-- Very nicely structured! Keep up the great work! -->
     <div class="header"></div>
     <div class="headline">
-      <h2>ITC AVANT GARDE GOTHIC / BOOK</h2>
+      <h2>ITC AVANT GARDE GOTHIC</h2>
     </div>
 
     <div class="letter">
