--- a/project-one/wireframe.html
+++ b/project-one/wireframe.html
@@ -3,19 +3,21 @@
 
 <head>
   <title>Avant Garde Letterform</title>
-  <link rel="stylesheet" href="assets/styles.css"></link>
+  <link rel="stylesheet" href="assets/wireframe-styles.css"></link>
 </head>
 
 <body>
 
-  <div class= "container">
-  <div class="box">
+<div class= "container">
+  <div class="headline-box">
 <!-- Very nicely structured! Keep up the great work! -->
     <div class="header"></div>
     <div class="headline">
       <h2>ITC AVANT GARDE GOTHIC</h2>
     </div>
+  </div>
 
+  <div class="letter-box">
     <div class="letter">
       <h1>Q</h1>
       <div id="button"></div>
@@ -23,19 +25,23 @@
 
       <p>Avant Garde is a geometrically shaped typeface with large circular counters, straight lines, and a t ll X-height. The typeface was created as a display face meant to be tightly kerned and closely leaded. Lubalin was inspired by the sans serif typeface Futura as well as the 1920s Bauhaus movement when he designed the original Avant Garde logo.</p>
     </div>
+  </div>
 
+  <div class="scrollbars"
     <section>ABCDEFGHIJKLMNOPQRSTUVWXYZ</section>
     <section>abcdefghijklmnopqrstuvwxyz</section>
+  </div>
 
-    <div class="info">
+  <footer>
       <img src="assets/yerim-lee-profile.jpg">
 
       <h3>Yerim Lee</h3>
       <h4>Designer and Multimedia Artist</h4>
-
-      <h5>Sources</h5>
-    </div>
-  </div>
-  </div>
+      <div class="sources">
+        <h5>Sources</h5>
+        <p></p>
+      </div>
+  </footer>
+</div>
 
 </body>
