--- a/project-one/wireframe.html
+++ b/project-one/wireframe.html
@@ -20,7 +20,7 @@
   <div class="letter-box">
     <h1>Q</h1>
     <div id="button"></div>
-    <p>The first use of the Avant Garde typeface was in the logo created by graphic designer, Herb Lubalin for the Avant Garde Magazine. The arts and politics magazine was especially popular with New York’s editorial art directors and advertisers. The type for the Avant Garde logo was originally all caps with uniquely fitted character placements (ligatures). Designers say that the first time the ligatures were used was the only time they were used correctly. The letters in the logo were later made into a full commercial font with upper and lower case by Lubalin and his assistant Tom Carnase(<a href="">Lubalin</a>).</p>
+    <p>The first use of the Avant Garde typeface was in the logo created by graphic designer, Herb Lubalin for the Avant Garde Magazine. The arts and politics magazine was especially popular with New York’s editorial art directors and advertisers. The type for the Avant Garde logo was originally all caps with uniquely fitted character placements (ligatures). The letters in the logo were later made into a full commercial font with upper and lower case by Lubalin and his assistant Tom Carnase(<a href="">Lubalin</a>).</p>
   </div>
 
   <div class="scrollbars"
