--- a/project-one/wireframe.html
+++ b/project-one/wireframe.html
@@ -28,16 +28,20 @@
     <h3 id= "lowercase">abcdefghijklmnopqrstuvwxyz</h3>
   </div>
 
-  <footer>
-      <img src="assets/yerim-lee-profile.jpg">
+  <div>
+    <footer>
+      <div>
+        <img src="assets/yerim-lee-profile.jpg">
 
-      <h3>Yerim Lee</h3>
-      <h4>Designer and Multimedia Artist</h4>
+        <h3>Yerim Lee</h3>
+        <h4>Designer and Multimedia Artist</h4>
+      </div>
       <div class="sources">
         <h5>Sources</h5>
         <p></p>
       </div>
-  </footer>
+    </footer>
+  </div>
 </div>
 
 </body>
