Change names and height footer

--- a/project-one/wireframe.html
+++ b/project-one/wireframe.html
@@ -30,9 +30,8 @@
 
   <div>
     <footer>
-      <div>
-        <img src="assets/yerim-lee-profile.jpg">
-
+      <img src="assets/yerim-lee-profile.jpg">
+      <div class= "author-heading">
         <h3>Yerim Lee</h3>
         <h4>Designer and Multimedia Artist</h4>
       </div>
