--- a/project-one/index.html
+++ b/project-one/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Avant Garde Letterform</title>
-  <link rel="stylesheet" href="assets/wireframe-styles.css"></link>
+  <link rel="stylesheet" href="assets/styles.css"></link>
 
 </head>
 
@@ -13,9 +13,7 @@
   <div class="headline-box">
 <!-- Very nicely structured! Keep up the great work! -->
     <div class="header"></div>
-    <div class="headline">
-      <h2>ITC AVANT GARDE GOTHIC</h2>
-    </div>
+    <h2>ITC AVANT GARDE GOTHIC</h2>
   </div>
 
   <div class="letter-box-Q">
