--- a/project-one/index.html
+++ b/project-one/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Avant Garde Letterform</title>
   <link rel="stylesheet" href="assets/styles.css"></link>
-
+  <link rel="stylesheet" href="https://use.typekit.net/pzu2duf.css">
 </head>
 
 <body>
