--- a/project-one/index.html
+++ b/project-one/index.html
@@ -5,23 +5,24 @@
   <title>Avant Garde Letterform</title>
   <link rel="stylesheet" href="assets/styles.css"></link>
   <link rel="stylesheet" href="https://use.typekit.net/pzu2duf.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="assets/toggle.jquery.js"></script>
 </head>
 
 <body>
 
 <div class= "container">
-  <div class="headline-box">
-<!-- Very nicely structured! Keep up the great work! -->
-    <div class="header"></div>
-    <h2>ITC AVANT GARDE GOTHIC</h2>
-  </div>
 
   <div class="letter-box-Q">
     <h1>Q</h1>
-    <div class="info">
-      <p>The first use of the Avant Garde typeface was in the logo created by graphic designer, Herb Lubalin for the Avant Garde Magazine. The arts and politics magazine was especially popular with New York’s editorial art directors and advertisers. The type for the Avant Garde logo was originally all caps with uniquely fitted character placements (ligatures). The letters in the logo were later made into a full commercial font with upper and lower case by Lubalin and his assistant Tom Carnase(<a href="">Lubalin</a>).</p>
-      <div id="button"></div>
-    </div>
+    <img id="letter-analysis" src="assets/q_analysis_image.png" width="735px" height="575px" alt="visual analysis of an Avant Garde capital Q">
+    <button id="button"></button>
+  </div>
+
+  <div class="headline-box">
+  <!-- Very nicely structured! Keep up the great work! -->
+    <div class="header"></div>
+    <h2>ITC AVANT GARDE GOTHIC</h2>
   </div>
 
   <div class="scrollbars">
@@ -33,12 +34,14 @@
     </div>
   </div>
 
-  <div class="letter-box-K">
+  <div class="letter-box-X">
     <div class="info">
-      <p>Avant Garde is a geometrically shaped typeface with large circular counters, straight lines, and a tall X-height. The typeface was created as a display face meant to be tightly kerned and closely leaded. Lubalin was inspired by the sans serif typeface Futura as well as the 1920s Bauhaus movement when he designed the original Avant Garde logo.
-      .</p>
+      <p>Avant Garde is a geometrically shaped typeface with large circular counters, straight lines, and a tall X-height. The typeface was created as a display face meant to be tightly kerned and closely leaded. Lubalin was inspired by the sans serif typeface Futura as well as the 1920s Bauhaus movement when he designed the original Avant Garde logo. The type for the Avant Garde logo was originally all caps with uniquely fitted character placements (ligatures).</p>
     </div>
-    <h1>K</h1>
+    <h1>X</h1>
+    <div class="info2">
+      <p>The first use of the Avant Garde typeface was in the logo created by graphic designer, Herb Lubalin for the Avant Garde Magazine. The arts and politics magazine was especially popular with New York’s editorial art directors and advertisers. The letters in the logo were later made into a full commercial font with upper and lower case by Lubalin and his assistant Tom Carnase(<a href="">Lubalin</a>).</p>
+    </div>
   </div>
 
   <div>
