--- a/project-one/index.html
+++ b/project-one/index.html
@@ -13,6 +13,8 @@
 
 <div class= "container">
 
+  <div class="header"></div>
+
   <div class="letter-box-Q">
     <h1>Q</h1>
     <img id="letter-analysis" src="assets/q_analysis_image.png" width="735px" height="575px" alt="visual analysis of an Avant Garde capital Q">
@@ -21,23 +23,19 @@
 
   <div class="headline-box">
   <!-- Very nicely structured! Keep up the great work! -->
-    <div class="header"></div>
     <h2>ITC AVANT GARDE GOTHIC</h2>
   </div>
 
   <div class="scrollbars">
-    <div id="capital">
-      <h3>ABCDEFGHIJKLMNOPQRSTUVWXYZ</h3>
-    </div>
-    <div id= "lowercase">
-      <h3>abcdefghijklmnopqrstuvwxyz</h3>
-    </div>
+      <h3 id=capital>ABCDEFGHIJKLMNOPQRSTUVWXYZ</h3>
+      <h3 id=lowercase>abcdefghijklmnopqrstuvwxyz</h3>
   </div>
 
   <div class="letter-box-X">
     <div class="info">
       <p>Avant Garde is a geometrically shaped typeface with large circular counters, straight lines, and a tall X-height. The typeface was created as a display face meant to be tightly kerned and closely leaded. Lubalin was inspired by the sans serif typeface Futura as well as the 1920s Bauhaus movement when he designed the original Avant Garde logo. The type for the Avant Garde logo was originally all caps with uniquely fitted character placements (ligatures).</p>
     </div>
+    <img id="letter-analysis-X" src="assets/x_analysis_image.png" height="475px" alt="visual analysis of an Avant Garde capital X">
     <h1>X</h1>
     <div class="info2">
       <p>The first use of the Avant Garde typeface was in the logo created by graphic designer, Herb Lubalin for the Avant Garde Magazine. The arts and politics magazine was especially popular with New York’s editorial art directors and advertisers. The letters in the logo were later made into a full commercial font with upper and lower case by Lubalin and his assistant Tom Carnase(<a href="">Lubalin</a>).</p>
@@ -46,11 +44,11 @@
 
   <div>
     <footer>
-      <img src="assets/yerim-lee-profile.jpg">
+      <img src="assets/profile-photo.png">
       <div class= "author-heading">
         <h3>Yerim Lee</h3>
         <h4>Designer and Multimedia Artist</h4>
-        <p id="intro"></p>
+        <p id="intro">I study Visual Communication Design at the Universiy of Notre Dame. This project was created for a Web Design course instructed by Professor Jordan Kaufman.</p>
         <h4>Sources</h4>
         <p id="citations"></p>
       </div>
