--- a/project-one/index.html
+++ b/project-one/index.html
@@ -13,7 +13,10 @@
 
 <div class= "container">
 
-  <div class="header"></div>
+  <div class="header">
+    <div class="click"> -----------  Click on the yellow button. ---------
+    </div>
+  </div>
 
   <div class="letter-box-Q">
     <h1>Q</h1>
@@ -31,6 +34,8 @@
       <h3 id=lowercase>abcdefghijklmnopqrstuvwxyz</h3>
   </div>
 
+  <div class="info-heading">INFO</div>
+
   <div class="letter-box-X">
     <div class="info">
       <p>Avant Garde is a geometrically shaped typeface with large circular counters, straight lines, and a tall X-height. The typeface was created as a display face meant to be tightly kerned and closely leaded. Lubalin was inspired by the sans serif typeface Futura as well as the 1920s Bauhaus movement when he designed the original Avant Garde logo. The type for the Avant Garde logo was originally all caps with uniquely fitted character placements (ligatures).</p>
@@ -38,7 +43,7 @@
     <img id="letter-analysis-X" src="assets/x_analysis_image.png" height="475px" alt="visual analysis of an Avant Garde capital X">
     <h1>X</h1>
     <div class="info2">
-      <p>The first use of the Avant Garde typeface was in the logo created by graphic designer, Herb Lubalin for the Avant Garde Magazine. The arts and politics magazine was especially popular with New York’s editorial art directors and advertisers. The letters in the logo were later made into a full commercial font with upper and lower case by Lubalin and his assistant Tom Carnase(<a href="">Lubalin</a>).</p>
+      <p>The first use of the Avant Garde typeface was in the logo created by graphic designer, Herb Lubalin for the Avant Garde Magazine. The arts and politics magazine was especially popular with New York’s editorial art directors and advertisers. The letters in the logo were later made into a full commercial font with upper and lower case by Lubalin and his assistant Tom Carnase(<a href="https://Lubalin100.com">Lubalin</a>).</p>
     </div>
   </div>
 
@@ -50,7 +55,28 @@
         <h4>Designer and Multimedia Artist</h4>
         <p id="intro">I study Visual Communication Design at the Universiy of Notre Dame. This project was created for a Web Design course instructed by Professor Jordan Kaufman.</p>
         <h4>Sources</h4>
-        <p id="citations"></p>
+        <p id="citations">
+          Lubalin100.com <br/>
+          </br>
+          Meggs, P. B. (1998). A History of Graphic Design by Philip Meggs (Sixth
+          Ed.). New York: John Wiley and Sons.<br/>
+          </br>
+          Heller, S. (2003). Merz to Emigre and
+          beyond : avant-garde magazine
+          design of the twentieth century. New
+          York: Phaidon Press Inc.<br/>
+          </br>
+          Heller, S. (2004). Off garde. Grafik,
+          (120), 46-49.<br/>
+          </br>
+          Romano, F. J. (2005, 04). Avant garde.
+          Electronic Publishing, 29, 44.<br/>
+          </br>
+          Snyder, G. (1985). Herb Lubalin :
+          art director, graphic designer, and
+          typographer. New York: American
+          Showcase: US & Canada distribution,
+          R. Silver Associates.</p>
       </div>
     </footer>
   </div>
