link to home page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>Yerim Lee - Web Design</h1>
     <section id="project-one">
       <h2>Project One</h2>
-      <a href="">Plain HTML</a>
-      <a href="">ColorBlock Wireframe</a>
+      <a href="project-one/plain.html">Plain HTML</a>
+      <a href="project-one/wireframe.html">ColorBlock Wireframe</a>
       <a href="project-one/index.html">Final Site</a>
     </section>
     <section id="ex3">
