--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Yerim Lee - Web Design</title>
+    <link rel="stylesheet" href="styles.css"></link>
   </head>
   <body>
     <h1>Yerim Lee - Web Design</h1>
@@ -11,9 +12,12 @@
       <a href="project-one/plain.html">Plain HTML</a>
       <a href="project-one/wireframe.html">ColorBlock Wireframe</a>
       <a href="project-one/index.html">Final Site</a>
-    </section>
-    <section id="ex3">
-      <h2>Exercise 3</h2>
       <a href="ex3_student_file/index.html">Froggie's Code Land</a>
+    </section>
+
+    <section id="project-two">
+      <h2>Project Two</h2>
+      <a href="project-two/wireframe.html">ColorBlock Wireframe</a>
+    </section>
   </body>
 </html>
