--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css"></link>
   </head>
   <body>
+    <div class="large-container">
     <h1>Yerim Lee - Web Design</h1>
     <section id="project-one">
       <h2>Project One</h2>
@@ -19,5 +20,6 @@
       <h2>Project Two</h2>
       <a href="project-two/wireframe.html">ColorBlock Wireframe</a>
     </section>
+  </div>
   </body>
 </html>
