updates to wireframe

--- a/project-two/sun-profile.html
+++ b/project-two/sun-profile.html
@@ -11,38 +11,39 @@
 <div class= "container">
 
   <div class="header">
-    <button id="back-button">back</button>
+    <a href="wireframe.html">back</a>
   </div>
 
   <div class="profile-card">
     <h1>Mercury</h1>
+    <p> lorem ipsum dajksfhjkash fweorj ofnsanks kacdjfjsakj afhakfdskj afsdhfkj afjkdsew rwg d fv sdkfjjlewrj weljfkls wejrwj fdsjlfk werjlkw sdfjlkjwe fsdlfjlw fwlkjsdf we sfldfj</p>
   </div>
 
   <div class="planets">
-    <div class="mercury">
+    <a href="mercury">
       <h4>Mercury</h4>
-    </div>
-    <div class="venus">
+    </a>
+    <a href="venus">
       <h4>Venus</h4>
-    </div>
-    <div class="earth">
+    </a>
+    <a href="earth">
       <h4>Earth</h4>
-    </div>
-    <div class="mars">
+    </a>
+    <a href="mars">
       <h4>Mars</h4>
-    </div>
-    <div class="jupiter">
+    </a>
+    <a href="jupiter">
       <h4>Jupiter</h4>
-    </div>
-    <div class="saturn">
+    </a>
+    <a href="saturn">
       <h4>Saturn</h4>
-    </div>
-    <div class="uranus">
+    </a>
+    <a href="uranus">
       <h4>Uranus</h4>
-    </div>
-    <div class="neptune">
+    </a>
+    <a href="neptune">
       <h4>Neptune</h4>
-    </div>
+    </a>
   </div>
 
 
