--- a/project-two/wireframe.html
+++ b/project-two/wireframe.html
@@ -14,7 +14,7 @@
 <div class="large-container">
 
   <div class="header">
-    <button id="planet-profiles">planet profiles</button>
+    <a href="sun-profile.html">planet profiles</a>
   </div>
 
   <div class="title">
