--- a/project-two/index.html
+++ b/project-two/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Solar System</title>
-  <link rel="stylesheet" href="assets/wireframe-styles.css"></link>
+  <link rel="stylesheet" href="assets/styles.css"></link>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="assets/hide-reveal.js" charset="utf-8"></script>
 </head>
