--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <section id="project-two">
       <h2>Project Two</h2>
       <a href="project-two/wireframe.html">ColorBlock Wireframe</a>
+      <a href="project-two/index.html">Final Site</a>
     </section>
   </div>
   </body>
