--- a/project-two/index.html
+++ b/project-two/index.html
@@ -14,65 +14,74 @@
 <div class="large-container">
 
   <div class="header">
-    <a href="sun-profile.html">planet profiles</a>
+    <a href="profiles-mercury.html">planet profiles</a>
   </div>
 
   <div class="title">
     <h2>Welcome to the</h2>
-    <h1>Solar System</h1>
+    <h1>SOLAR SYSTEM</h1>
   </div>
 
   <div class="sun">
     <div class="sun-box">
       <div class="caption visible">
-        <h3>Sun</h3>
-        <button id="sun-info"></button>
+        <h3>SUN</h3>
+        <div class="arrow-down"></div>
       </div>
     </div>
+    <p> At the heart of our Solar System is the Sun, a yellow dwarf star. Its gravity holds the entire Solar System together.</p>
   </div>
 
 
   <section class="one">
-  <div class="mercury" data-parallax=".2">
-    <div class="mercury-box">
-      <div class="caption visible">
-        <h3>Mercury</h3>
-        <button id="mercury-info"></button>
+    <div class="mercury" data-parallax=".1">
+      <div class="mercury-box">
+        <div class="caption visible">
+          <h3>MERCURY</h3>
+          <div class="arrow-down"></div>
+        </div>
       </div>
+      <p> The first planet in the Solar System. Mercury is slightly larger than the Earth's moon. </p>
+      <a href="profiles-mercury.html">MORE</a>
     </div>
-  </div>
   </section>
 
   <section class="two">
-  <div class="venus" data-parallax=".25">
+  <div class="venus" data-parallax=".15">
     <div class="venus-box">
       <div class="caption visible">
-        <h3>Venus</h3>
-        <button id="venus-info"></button>
+        <h3>VENUS</h3>
+        <div class="arrow-down"></div>
       </div>
     </div>
+    <p> The second planet in the Solar System is also Earth's closest neigbor. Venus is known for extreme temperatures.</p>
+    <a href="profiles-venus.html">MORE</a>
   </div>
   </section>
 
   <section class="three">
-  <div class="earth" data-parallax=".3">
+  <div class="earth" data-parallax=".10">
     <div class="earth-box">
       <div class="caption visible">
-        <h3>Earth</h3>
-        <button id="earth-info"></button>
+        <h3>EARTH</h3>
+        <div class="arrow-down"></div>
       </div>
     </div>
+    <p> The third planet is the only planet to have living inhabitants. Also, the only planet to have liquid water on the surface.</p>
+    <a href="profiles-earth.html">MORE</a>
   </div>
   </section>
 
   <section class="four">
-  <div class="mars" data-parallax=".35">
+  <div class="mars" data-parallax=".15">
     <div class="mars-box">
       <div class="caption visible">
-        <h3>Mars</h3>
-        <button id="mars-info"></button>
+        <h3>MARS</h3>
+        <div class="arrow-down"></div>
       </div>
     </div>
+    <p>The fourth planet, Mars, is one of the most explored bodies in the Solar System.</p>
+    <a href="profiles-mars.html">MORE</a>
   </div>
   </section>
 
@@ -80,21 +89,25 @@
   <div class="jupiter" data-parallax=".4">
     <div class="jupiter-box">
       <div class="caption visible">
-        <h3>Jupiter</h3>
-        <button id="jupiter-info"></button>
+        <h3>JUPITER</h3>
+        <div class="arrow-down"></div>
       </div>
     </div>
+    <p> The fifth planet is twice as massive as all the other planets combined. It's Red Spot is a gigantic storm twice the size of Earth.</p>
+    <a href="profiles-jupiter.html">MORE</a>
   </div>
   </section>
 
   <section class="six">
-  <div class="saturn" data-parallax=".45">
+  <div class="saturn" data-parallax=".50">
     <div class="saturn-box">
       <div class="caption visible">
-        <h3>Saturn</h3>
-        <button id="saturn-info"></button>
+        <h3>SATURN</h3>
+        <div class="arrow-down"></div>
       </div>
     </div>
+    <p> The sixth planet is famous for its beautiful ringlets, which are made from chunks of ice and rock. </p>
+    <a href="profiles-saturn.html">MORE</a>
   </div>
   </section>
 
@@ -102,21 +115,25 @@
   <div class="uranus" data-parallax=".5">
     <div class="uranus-box">
       <div class="caption visible">
-        <h3>Uranus</h3>
-        <button id="uranus-info"></button>
+        <h3>URANUS</h3>
+        <div class="arrow-down"></div>
       </div>
     </div>
+    <p> The seventh planet, Uranus is an icy planet that uniquely rotates on its side. </p>
+    <a href="profiles-uranus.html">MORE</a>
   </div>
   </section>
 
   <section class="eight">
-  <div class="neptune invisible" data-parallax=".55">
+  <div class="neptune invisible" data-parallax=".75">
     <div class="neptune-box visible">
       <div class="caption visible">
-        <h3>Neptune</h3>
-        <button id="neptune-info"></button>
+        <h3>NEPTUNE</h3>
+        <div class="arrow-down"></div>
       </div>
     </div>
+    <p> The eight planet is dark, windy, and cold for it is most distant from the Sun. It's the only planet not visible to the naked eye. </p>
+    <a href="profiles-neptune.html">MORE</a>
   </div>
   </section>
 
