--- a/project-two/wireframe.html
+++ b/project-two/wireframe.html
@@ -14,7 +14,7 @@
 <div class="large-container">
 
   <div class="header">
-    <a href="wireframe-profiles.html">planet profiles</a>
+    <a href="wireframe-profile.html">planet profiles</a>
   </div>
 
   <div class="title">
