--- a/project-two/wireframe-profile.html
+++ b/project-two/wireframe-profile.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Solar System</title>
-  <link rel="stylesheet" href="assets/profile-styles.css"></link>
+  <link rel="stylesheet" href="assets/wireframe-profile-styles.css"></link>
 </head>
 
 <body>
