--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="project-one/plain.html">Plain HTML</a>
       <a href="project-one/wireframe.html">ColorBlock Wireframe</a>
       <a href="project-one/index.html">Final Site</a>
-      <a href="ex3_student_file/index.html">Froggie's Code Land</a>
+      <a href="ex3_student_file/index.html">Exercise 3</a>
     </section>
 
     <section id="project-two">
@@ -21,6 +21,10 @@
       <a href="project-two/wireframe.html">ColorBlock Wireframe</a>
       <a href="project-two/index.html">Final Site</a>
     </section>
+
+    <section id="project-three">
+      <h2>Project Three</h2>
+      <a href="ex4_student_file/index.html">Exercise 4</a>
   </div>
   </body>
 </html>
