--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <section id="project-three">
       <h2>Project Three</h2>
       <a href="ex4_student_file/index.html">Exercise 4</a>
+      <a href="resume/index.html">Resume</a>
   </div>
   </body>
 </html>
